syntax = "proto3";
package comp41720.cinequest.grpc;
import "google/protobuf/empty.proto";

option java_package = "comp41720.cinequest.grpc";
option java_outer_classname = "AchievementServiceProto";

service AchievementService {
  rpc UpdateSignCount(UpdateSignCountRequest) returns (google.protobuf.Empty);
}

message UpdateSignCountRequest {
  string user_id = 1;
  int64 total_sign_count = 2;
  string user_email = 3;
  string user_name = 4;
}
